# midi-roll

./: .gitignore  846_1.mid  Makefile  README.md  colormap.ipynb  midi_analysis.ipynb  midi_roll.ipynb  music21-chorale.ipynb  music21.ipynb  parse_midi.py  pyproject.toml  pyproject.toml.rest  requirements.txt  roll.py
midi-roll/: pyproject.toml
midi-roll/tests/: test_midi_roll.py
midi-visualization/: roll.py
midiroll/: __init__.py  __main__.py  roll.py
tests/: test_midi_visualization.py
