[tool.poetry]
name = "midi-roll"
version = "0.1.0"
description = "Vsualize MIDI file"
authors = ["jnishii <nishii@yamaguchi-u.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
mido = "^1.2.10"
path = "^16.4.0"
streamlit = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
