[tool.poetry]
name = "midi-roll"
version = "0.1.0"
description = ""
authors = ["jnishii <nishii@yamaguchi-u.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
librosa = "^0.9.2"
mido = "^1.2.10"
plotly = "^5.11.0"
streamlit = "^1.15.1"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
jupyter = "^1.0.0"
jupyterlab = "^3.5.0"
seaborn = "^0.12.1"
black = "^22.10.0"
isort = "^5.10.1"
jupyterlab-code-formatter = "^1.5.3"
watchdog = "^2.2.0"
numpy = "^1.23.5"
music21 = "^8.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
